fixing nowrap issue in meta

--- a/app/assets/stylesheets/frontend/views/_policies.scss
+++ b/app/assets/stylesheets/frontend/views/_policies.scss
@@ -73,7 +73,6 @@
     position: relative;
     clear: both;
     margin-top: $gutter-one-third;
-    white-space: nowrap;
 
     .metadata {
       display: inline;
